Added a marketing tagline and some buttons

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header></header>
+    <header>
+      <button class="link">Too light?</button>
+    </header>
     <main>
-      <h1>Hello, world!</h1>
+      <h1>I give projects a pulse by creating vibrant illustrations and intuitive interfaces</h1>
+      <button class="primary">Illustrations</button>
+      <button class="primary">Web Projects</button>
+      <a href="#">Contact</a>
     </main>
     <footer></footer>
   </body>
