--- a/index.html
+++ b/index.html
@@ -6,15 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header>
-      <button class="link">Too light?</button>
-    </header>
     <main>
-      <h1>I give projects a pulse by creating vibrant illustrations and intuitive interfaces</h1>
-      <button class="primary">Illustrations</button>
-      <button class="primary">Web Projects</button>
-      <a href="#">Contact</a>
+      <img href="/gifs/Jelly.gif" />
     </main>
-    <footer></footer>
   </body>
 </html>
