fixing the image link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <main>
-      <img href="/gifs/Jelly.gif" />
+      <div class="centered">
+        <img src="/gifs/Jelly.gif" width="300" />
+      </div>
     </main>
   </body>
 </html>
