--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <main>
       <div class="centered">
+        <p>Please enjoy this jelly.</p>
         <img src="/gifs/Jelly.gif" width="300" />
       </div>
     </main>
