Adjusting the text a bit

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   <body>
     <main>
       <div class="centered">
-        <p>Please enjoy this jelly.</p>
         <img src="/gifs/Jelly.gif" width="300" />
+        <p>
+          Please enjoy this jelly.
+          <span><u>Hire me!</u></span>
+          &nbsp;
+          <span><u>Show me more...</u></span>
+        </p>
       </div>
     </main>
   </body>
