Updated Jelly GIF and text

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <body>
     <main>
       <div class="centered">
-        <img src="/gifs/Jelly.gif" width="300" />
+        <img src="/gifs/Jelly 2.gif" width="300" />
         <p>
-          Please enjoy this jelly.
-          <span><u>Hire me!</u></span>
-          &nbsp;
-          <span><u>Show me more...</u></span>
+          JELLIES<br />
+          AT<br />
+          WORK<br />
         </p>
       </div>
     </main>
